cambios agregamos al index

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Hola mundo</title>
 </head>
 <body>
-    <p>Hola profe este tambien es mi sitio web sigueme en facebook o en instagram para aprender</p>
+    <p>Hola profe este tambien es mi sitio web sigueme en facebook o en instagram para aprender y me emociona como lo hago</p>
 </body>
 </html>
